sedikit revisi html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <section id="home">
+    <section id="home" class="home">
         <div class="kontainer-utama">
             <div class="judul-utama">
                 <h1>galeri<span>rpl2</span></h1>
